--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -9,6 +9,7 @@ RUN pecl install xdebug; \
     echo zend_extension="/usr/local/lib/php/extensions/no-debug-non-zts-20170718/xdebug.so" >> /usr/local/etc/php/conf.d/xdebug.ini; echo; \
     echo xdebug.remote_enable=1 >> /usr/local/etc/php/conf.d/xdebug.ini; echo; \
     echo xdebug.remote_port = 9001 >> /usr/local/etc/php/conf.d/xdebug.ini; echo; \
+    echo xdebug.idekey = PHPSTORM >> /usr/local/etc/php/conf.d/xdebug.ini; echo; \
     echo xdebug.remote_connect_back=1  >> /usr/local/etc/php/conf.d/xdebug.ini;
 
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"; \
